--- a/ThuChi/Table.html
+++ b/ThuChi/Table.html
@@ -184,7 +184,7 @@
         const ACCESS_KEY = 'V2-IEkJl-GKXgi-aBjtl-fN3Ur-QQSYX-Ggn6e-m9pkA-GtxEU';
         const REGION = 'www';
         const IMGBB_API_KEY = '93bfdf6d5910909c985faf82ee7220cc';
-        const maNV  =''
+        let maNV  =''
         // State Management
         const state = {
             records: new Map(),
