--- a/ThuChi/Table.html
+++ b/ThuChi/Table.html
@@ -184,7 +184,7 @@
         const ACCESS_KEY = 'V2-IEkJl-GKXgi-aBjtl-fN3Ur-QQSYX-Ggn6e-m9pkA-GtxEU';
         const REGION = 'www';
         const IMGBB_API_KEY = '93bfdf6d5910909c985faf82ee7220cc';
-        let maNV  =''
+        let maNV = ''
         // State Management
         const state = {
             records: new Map(),
@@ -313,16 +313,17 @@
             },
             async uploadImage(file) {
                 if (!file) return '';
-                const formData = new FormData();
-                formData.append('image', file);
-
                 try {
-                    const response = await axios.post(
-                        `https://api.imgbb.com/1/upload?key=${IMGBB_API_KEY}`,
-                        formData
-                    );
-                    return response.data.data.url;
+                    // Convert File to base64
+                    const base64Image = await new Promise((resolve) => {
+                        const reader = new FileReader();
+                        reader.onloadend = () => resolve(reader.result);
+                        reader.readAsDataURL(file);
+                    });
+
+                    return await uploadToImgur(base64Image);
                 } catch (error) {
+                    console.error('Error uploading image:', error);
                     throw new Error('Failed to upload image');
                 }
             },
@@ -379,7 +380,25 @@
             const dropdown = row.querySelector('.dropdown');
             dropdown.classList.toggle('hidden');
         }
-
+        const uploadToImgur = async (base64Image) => {
+            const IMGUR_CLIENT_ID = '3130824a743e53a';  // Client ID của bạn
+            try {
+                const base64Data = base64Image.split(',')[1];
+                const response = await axios.post('https://api.imgur.com/3/image', {
+                    image: base64Data,
+                    type: 'base64'
+                }, {
+                    headers: {
+                        'Authorization': `Client-ID ${IMGUR_CLIENT_ID}`,
+                        'Content-Type': 'application/json'
+                    }
+                });
+                return response.data.data.link;
+            } catch (error) {
+                console.error('Error uploading to Imgur:', error);
+                throw new Error('Lỗi khi upload ảnh');
+            }
+        };
         function updateMDADisplay(recordId) {
             const record = state.records.get(recordId);
             const row = document.querySelector(`tr[data-record-id="${recordId}"]`);
@@ -863,7 +882,7 @@
                         'ĐỐI TƯỢNG': record.doiTuong,
                         'NHÂN VIÊN THỰC HIỆN': record.nhanVien,
                         'Hình ảnh': record.image || '',
-                        'LỊCH SỬ':  maNV + ' đã tạo phiếu nhanh qua apl lúc ' +  record.thoiGian
+                        'LỊCH SỬ': maNV + ' đã tạo phiếu nhanh qua apl lúc ' + record.thoiGian
                     }));
 
                     // Lưu records
@@ -969,31 +988,31 @@
         document.addEventListener('DOMContentLoaded', async () => {
             const urlParams = new URLSearchParams(window.location.search);
             maNV = urlParams.get('manv');
-        
-                try {
-                    // Load all necessary data
-                    const [hierarchyData, mdaData, nhanVienData] = await Promise.all([
-                        api.loadHierarchyData(),
-                        api.loadMDAData(),
-                        api.loadNhanVienData()
-                    ]);
 
-                    // Store options in state
-                    state.mdaOptions = mdaData;
-                    state.nhanVienOptions = nhanVienData;
+            try {
+                // Load all necessary data
+                const [hierarchyData, mdaData, nhanVienData] = await Promise.all([
+                    api.loadHierarchyData(),
+                    api.loadMDAData(),
+                    api.loadNhanVienData()
+                ]);
 
-                    // Initialize first row
-                    formOperations.addNewRow();
-                    formOperations.addNewRow();
-                    formOperations.addNewRow();
-                    formOperations.addNewRow();
-                    formOperations.addNewRow();
-                    formOperations.addNewRow();
-                } catch (error) {
-                    console.error('Initialization error:', error);
-                    toast.show('Không thể khởi tạo ứng dụng', 'error');
-                }
-            
+                // Store options in state
+                state.mdaOptions = mdaData;
+                state.nhanVienOptions = nhanVienData;
+
+                // Initialize first row
+                formOperations.addNewRow();
+                formOperations.addNewRow();
+                formOperations.addNewRow();
+                formOperations.addNewRow();
+                formOperations.addNewRow();
+                formOperations.addNewRow();
+            } catch (error) {
+                console.error('Initialization error:', error);
+                toast.show('Không thể khởi tạo ứng dụng', 'error');
+            }
+
 
 
         });
