--- a/ChamcongNZ.html
+++ b/ChamcongNZ.html
@@ -14,9 +14,13 @@
     <script type="text/javascript"
         src="https://cdn.jsdelivr.net/gh/lelinh014756/fui-toast-js@master/assets/js/toast@1.0.1/fuiToast.min.js"></script>
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.css">
+    <link rel="stylesheet" type="text/css"
+        href="https://cdn.datatables.net/rowgroup/1.1.3/css/rowGroup.dataTables.min.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" charset="utf8"
         src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.js"></script>
+    <script type="text/javascript" charset="utf8"
+        src="https://cdn.datatables.net/rowgroup/1.1.3/js/dataTables.rowGroup.min.js"></script>
 </head>
 
 <body class="bg-gray-100">
@@ -125,6 +129,10 @@
         let attendanceData = [];
 
         const DAYS_OF_WEEK = ["Chủ nhật", "Thứ hai", "Thứ ba", "Thứ tư", "Thứ năm", "Thứ sáu", "Thứ bảy"];
+        // Update the date formatting function
+        const formatDate = (date) => {
+            return dayjs(date).format('DD/MM/YYYY');
+        };
 
         // Utility functions
         const setDefaultDate = () => {
@@ -344,6 +352,7 @@
         };
 
         // Sửa lại hàm markAttendance để xử lý phụ cấp mới
+        // Update markAttendance function to use the new date format
         const markAttendance = async (employeeId, status) => {
             const date = document.getElementById("date").value;
             if (!date) {
@@ -411,15 +420,27 @@
             };
         };
 
+
         const updateAttendanceTable = () => {
+            // Add a custom sort date for proper sorting
+            const formattedData = attendanceData.map(record => ({
+                ...record,
+                'Ngày': dayjs(record['Ngày']).format('DD/MM/YYYY'),
+                'SortDate': dayjs(record['Ngày']).format('YYYY-MM-DD') // Hidden column for sorting
+            }));
+
             if (dataTable) {
-                dataTable.clear().rows.add(attendanceData).draw();
+                dataTable.clear().rows.add(formattedData).draw();
             } else {
                 dataTable = $('#attendanceTable').DataTable({
-                    data: attendanceData,
+                    data: formattedData,
                     columns: [
                         { data: 'Mã chấm công' },
-                        { data: 'Ngày' },
+                        {
+                            data: 'Ngày',
+                            type: 'date',
+                            orderData: [10] // Order using the hidden SortDate column
+                        },
                         { data: 'Thứ' },
                         { data: 'Mã nhân viên' },
                         {
@@ -463,21 +484,34 @@
                             render: function (data, type, row) {
                                 return `<button class="bg-red-500 hover:bg-red-600 text-white font-bold py-1 px-2 rounded transition duration-300" onclick="deleteAttendanceRecord('${row['Mã chấm công']}')"><i class="fas fa-trash-alt mr-1"></i>Xóa</button>`;
                             }
+                        },
+                        {
+                            data: 'SortDate',
+                            visible: false // Hidden column for sorting
                         }
                     ],
+                    order: [[9, 'desc']], // Sort by hidden SortDate column descending
+                    rowGroup: {
+                        dataSrc: function (row) {
+                            return dayjs(row.SortDate).format('DD/MM/YYYY');
+                        },
+                        startRender: function (rows, group) {
+                            return `<span class="font-bold text-lg">${group}</span>`;
+                        }
+                    },
                     language: {
                         url: 'https://cdn.datatables.net/plug-ins/1.11.5/i18n/vi.json'
                     },
                     pageLength: 10,
                     lengthMenu: [[10, 25, 50, -1], [10, 25, 50, "Tất cả"]],
                     responsive: true,
-                    order: [[1, 'desc']], // Sort by date column descending
                     drawCallback: function () {
                         $('.dataTables_paginate > .pagination').addClass('flex justify-center mt-4');
                     }
                 });
             }
         };
+
 
         const initializeApp = async () => {
             setDefaultDate();
